# search-claude-history

./: LICENSE  README.md  pyproject.toml  search_claude_history.py
skill/: SKILL.md
src/: _search_claude_history_entry.py
src/search_claude_history/: cli.py
