[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search-claude-history"
version = "0.1.1"
description = "Search across Claude Code session history"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

[project.urls]
Homepage = "https://github.com/wakamex/search-claude-history"
Source = "https://github.com/wakamex/search-claude-history"

[project.optional-dependencies]
hyperscan = ["hyperscan>=0.7"]

[project.scripts]
search-claude-history = "search_claude_history.cli:main"
sch = "search_claude_history.cli:main"
