[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search-claude-history"
version = "0.1.3"
description = "Search across Claude Code session history"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

[project.urls]
Homepage = "https://github.com/wakamex/search-claude-history"
Source = "https://github.com/wakamex/search-claude-history"

[project.optional-dependencies]
hyperscan = ["hyperscan>=0.7"]

[project.scripts]
search-claude-history = "_search_claude_history_entry:main"
sch = "_search_claude_history_entry:main"

[tool.hatch.build.targets.wheel.force-include]
"src/_search_claude_history_entry.py" = "_search_claude_history_entry.py"
